# nano-rs

./: .gitignore  Cargo.toml  README.md  nano.toml
.github/workflow/: general.yml
src/: buffer.rs  content.rs  editor.rs  error.rs  file.rs  main.rs  nano.rs  terminal.rs  view.rs
src/config/: configuration.rs
src/view/: configuration.rs  editor.rs  terminal.rs
