[package]
name = "nanos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.2.7", features = ["derive"] }
console = "0.15.5"
crossterm = "0.26.1"
syntect = "5.0.0"
