[package]
name = "nanos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
syntect = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
unicode-segmentation = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.7.6"
serde = "1.0.183"
serde_derive = "1.0.183"
